--- a/OceanShip/Assembly-CSharp.csproj
+++ b/OceanShip/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\dropItems.cs" />
      <Compile Include="Assets\scripts\AudioScript.cs" />
      <Compile Include="Assets\scripts\ExtendedFlycam.cs" />
      <Compile Include="Assets\scripts\GenerateWaterMesh.cs" />
